<resources>
    <string name="app_name">NetworkNotifier</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="clear_log">Clear Log</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_2g">2G</string>
    <string name="_3g">3G</string>
    <string name="_4g">4G/LTE</string>
    <string name="phone_network">Cellular/Data Monitor</string>
    <string name="wifi_network">Wifi Monitor</string>
    <string name="phone">Phone</string>
    <string name="wifi">Wifi</string>
    <string name="start_up">Start on boot</string>
    <string name="other_settings">Other Settings</string>
    <string name="only_image">Only Image</string>
</resources>
